# rarefish

./: .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: pull-request.yml
ci/: cargo-build-test.sh  cargo-test-sbf.sh  do-audit.sh  fuzz.sh  solana-version.sh
client/: Cargo.toml  pool-config.json
client/src/: client.rs  command.rs  main.rs
docs/src/: hyperplane.md
js/: package.json
js/src/util/: const.ts
js/test/: hyperplane-test.ts
programs/hyperplane/: Cargo.toml  program-id.md
programs/hyperplane/fuzz/: Cargo.toml
programs/hyperplane/fuzz/src/: instructions.rs  native_token.rs  native_token_swap.rs
programs/hyperplane/sim/src/: lib.rs
programs/hyperplane/src/: constraints.rs  ix.rs  lib.rs  state.rs
programs/hyperplane/src/curve/: calculator.rs  constant_price.rs  constant_product.rs  math.rs  offset.rs  stable.rs
programs/hyperplane/src/instructions/: deposit.rs  initialize_pool.rs  swap.rs  update_pool_config.rs  withdraw.rs  withdraw_fees.rs
programs/hyperplane/src/instructions/test/: test_deposit.rs  test_initialize_pool.rs  test_swap.rs  test_withdraw.rs
programs/hyperplane/src/instructions/test/runner/: processor.rs  syscall_stubs.rs
programs/hyperplane/src/utils/: math.rs  mod.rs  pool_pda.rs
programs/hyperplane/tests/: tests_common_swap.rs  tests_common_swap_transfer_fees.rs
programs/hyperplane/tests/common/: macros.rs  mod.rs  runner.rs  token_operations.rs
programs/hyperplane/viz/src/: main.rs  stable.rs
